// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmNotification.vue has the expected html structure 1`] = `
<div
  class="tm-notification"
>
  <header>
    <!---->
     
    <!---->
     
    <menu>
      <div
        class="time"
      >
        
        a few seconds ago
      
      </div>
       
      <i
        class="close material-icons"
      >
        close
      </i>
    </menu>
  </header>
   
  <div
    class="body"
  >
    
    asdf
  
  </div>
</div>
`;

exports[`TmNotification.vue has the expected html structure 2`] = `
<div
  class="tm-notification"
>
  <header>
    <!---->
     
    <div
      class="title"
    >
      
      title
    
    </div>
     
    <menu>
      <div
        class="time"
      >
        
        a few seconds ago
      
      </div>
       
      <i
        class="close material-icons"
      >
        close
      </i>
    </menu>
  </header>
   
  <div
    class="body"
  >
    
    sadf
  
  </div>
</div>
`;

exports[`TmNotification.vue has the expected html structure 3`] = `
<div
  class="tm-notification"
>
  <header>
    <div
      class="icon"
    >
      <i
        class="material-icons"
      >
        search
      </i>
    </div>
     
    <!---->
     
    <menu>
      <div
        class="time"
      >
        
        a few seconds ago
      
      </div>
       
      <i
        class="close material-icons"
      >
        close
      </i>
    </menu>
  </header>
   
  <div
    class="body"
  >
    
    sadf
  
  </div>
</div>
`;

exports[`TmNotification.vue has the expected html structure 4`] = `
<div
  class="tm-notification tm-notification-warning"
>
  <header>
    <!---->
     
    <!---->
     
    <menu>
      <div
        class="time"
      >
        
        a few seconds ago
      
      </div>
       
      <i
        class="close material-icons"
      >
        close
      </i>
    </menu>
  </header>
   
  <div
    class="body"
  >
    
    sadf
  
  </div>
</div>
`;

exports[`TmNotification.vue has the expected html structure 5`] = `
<div
  class="tm-notification tm-notification-error"
>
  <header>
    <!---->
     
    <!---->
     
    <menu>
      <div
        class="time"
      >
        
        a few seconds ago
      
      </div>
       
      <i
        class="close material-icons"
      >
        close
      </i>
    </menu>
  </header>
   
  <div
    class="body"
  >
    
    sadf
  
  </div>
</div>
`;

exports[`TmNotification.vue has the expected html structure 6`] = `
<div
  class="tm-notification"
>
  <header>
    <!---->
     
    <!---->
     
    <menu>
      <div
        class="time"
      >
        
        a few seconds ago
      
      </div>
       
      <i
        class="close material-icons"
      >
        close
      </i>
    </menu>
  </header>
   
  <div
    class="body"
  >
    
    sadf
  
  </div>
</div>
`;
